grammar.js
    compilation_unit: $ => repeat($._definition),

    _definition: $ => choice(
      $.package_clause,
      $.package_object,
      $._definition_in_block,
    ),

    object_definition: $ => seq(
      optional($.modifiers),
      optional('case'),
      'object',
      $._object_definition
    ),

    _object_definition: $ => prec.right(seq(
      field('name', $.identifier),
      field('extend', optional($.extends_clause)),
      field('body', optional($.template_body)),
    )),

    class_definition: $ => prec.right(seq(
      repeat($.annotation),
      optional($.modifiers),
      optional('case'),
      'class',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('class_parameters', repeat($.class_parameters)),
      field('extend', optional($.extends_clause)),
      field('body', optional($.template_body))
    )),

    template_body: $ => seq(
      '{',
      // TODO: self type
      optional(prec.left($._template_block)),
      '}'
    ),

    val_definition: $ => seq(
      repeat($.annotation),
      optional($.modifiers),
      'val',
      field('pattern', $._pattern2),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression)
    ),

    function_definition: $ => seq(
      repeat($.annotation),
      optional($.modifiers),
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', repeat($.parameters)),
      optional(seq(':', field('return_type', $._type))),
      choice(
        seq('=', field('body', $._expression)),
        field('body', $.block)
      )
    ),

    parameters: $ => seq(
      '(',
      optional('implicit'),
      commaSep($.parameter),
      ')'
    ),

    // TODO: Support modifiers (conflict with implicit param list).
    parameter: $ => seq(
      repeat($.annotation),
      field('name', $.identifier),
      optional(seq(':', field('type', $._param_type))),
      optional(seq('=', field('default_value', $._expression)))
    ),

    // TemplateStat {semi TemplateStat}
    _template_block: $ => seq(
      sep1($._semicolon, choice(
        $._expression,
        $._definition_in_block,
      )),
      optional($._semicolon),
    ),

    // Block
    _block: $ => choice(
      seq(
        sep1($._semicolon, choice(
          $._non_function_expression,
          $._definition_in_block,
        )),
        optional(seq($._semicolon, alias($.function_expression_in_block, $.function_expression))),
        optional($._semicolon),
      ),
      alias($.function_expression_in_block, $.function_expression),
    ),

    // '{' Block '}'
    block: $ => seq(
      '{',
      optional($._block),
      '}'
    ),

    // ---------------------------------------------------------------
    // Types

    _type: $ => choice(
      $.function_type,
      $.compound_type,
      $.infix_type,
      $._annotated_type,
    ),

    // TODO: Make this a visible type, so that _type can be a supertype.
    _simple_type: $ => choice(
      $.generic_type,
      $.projected_type,
      $.tuple_type,
      $.stable_type_identifier,
      $._type_identifier,
    ),

    generic_type: $ => seq(
      field('type', $._simple_type),
      field('type_arguments', $.type_arguments)
    ),

    _param_type: $ => choice(
      $._type,
      $.lazy_parameter_type,
      $.repeated_parameter_type,
    ),

    _pattern: $ => choice(
      $.alternative_pattern,
      $.typed_pattern,
      $._pattern2,
    ),

    _pattern2: $ => choice(
      $.identifier,
      $.capture_pattern,
      $.tuple_pattern,
      $.case_class_pattern,
      $.infix_pattern,
      $.number,
      $.string,
      $.wildcard
    ),

    _expression: $ => choice(
      $._non_function_expression,
      $.function_expression,
    ),

    // Expr1
    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._expression),
      optional(seq(
        'else',
        field('alternative', $._expression)
      ))
    )),

    while_expression: $ => seq(
      'while',
      field('condition', $.parenthesized_expression),
      field('body', $._expression),
    ),

    // TODO: Give this its own precedence?
    match_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      'match',
      field('body', $.case_block)
    )),

    try_expression: $ => prec.right(seq(
      'try',
      field('body', $._expression),
      optional($.catch_clause),
      optional($.finally_clause)
    )),

    catch_clause: $ => prec.right(seq('catch', $.case_block)),

    finally_clause: $ => prec.right(seq('finally', $._expression)),

    case_block: $ => choice(
      prec(-1, seq('{', '}')),
      seq('{', repeat1($.case_clause), '}')
    ),

    case_clause: $ => prec.left(seq(
      'case',
      field('pattern', $._pattern),
      optional($.guard),
      '=>',
      field('body', optional($._block)),
    )),

    assignment_expression: $ => prec.right(PREC.assign, seq(
      field('left', $._expression),
      '=',
      field('right', $._expression)
    )),

    // SimpleExpr TypeArgs
    generic_function: $ => prec(PREC.call, seq(
      field('function', $._expression),
      field('type_arguments', $.type_arguments)
    )),

    // SimpleExpr1 ArgumentExprs
    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression),
      $._arguments,
    )),

    // ArgumentExprs.
    _arguments: $ => choice(
      field('arguments', $.arguments),
      field('body', $._block_expression),
    ),

    field_expression: $ => prec(PREC.field, seq(
      field('value', $._expression),
      '.',
      field('field', $.identifier)
    )),

    instance_expression: $ => prec(PREC.new, seq(
      'new',
      $._expression
    )),

    infix_expression: $ => prec.left(PREC.infix, seq(
      field('left', $._expression),
      field('operator', choice($.identifier, $.operator_identifier)),
      field('right', $._expression)
    )),

    prefix_expression: $ => prec(PREC.prefix, seq(
      choice('+', '-', '!', '~'),
      $._expression
    )),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    type_arguments: $ => seq(
      '[',
      commaSep1($._type),
      ']'
    ),

    //  '(' [Exprs] ')'  TODO: ':_*'
    arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    // (Bindings | ['implicit'] id | '_') '=>' Expr
    function_expression: $ => seq(
      field('function_parameters', $.function_parameters),
      '=>',
      field('body', $._expression)
    ),

    // ResultExpr ::= (Bindings | (['implicit'] id | '_') ':' CompoundType) '=>' Block
    function_parameters: $ => prec(-1, choice(
      // Prioritize a parenthesized param list over a single tuple_expression.
      prec.dynamic(1, seq('(', commaSep($._binding), ')')),
      $._binding,
    )),

    _binding: $ => seq(
      choice($.identifier, $.wildcard),
      optional(seq(':', $._type)),
    ),

    // TODO: Include operators.
    identifier: $ => /[a-zA-Z_]\w*/,

    wildcard: $ => '_',

    operator_identifier: $ => /[^\s\w\(\)\[\]\{\}'"`\.;,]+/,

    number: $ => /[\d\.]+/,

    string: $ => choice(
      $._simple_string,
      seq(
        $._string_start,
        $.interpolation,
        repeat(seq(
          $._string_middle,
          $.interpolation,
        )),
        $._string_end
      ),
      seq(
        $._multiline_string_start,
        $.interpolation,
        repeat(seq(
          $._multiline_string_middle,
          $.interpolation,
        )),
        $._multiline_string_end
      )
    ),
